# gradient-descent-the-ultimate-optimizer

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gradient_descent_the_ultimate_optimizer/: gdtuo.py
