[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gradient_descent_the_ultimate_optimizer"
version = "0.1.0"
authors = [
  { name="Kartik Chandra" },
  { name="Audrey Xie" }
]
description = "Code for paper, Gradient Descent: The Ultimate Optimizer"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kach/gradient-descent-the-ultimate-optimizer"